--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "remark-html": "^15.0.2"
   },
   "devDependencies": {
+    "@headlessui/tailwindcss": "^0.1.2",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "autoprefixer": "^10.4.13",
