--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.10",
@@ -16,10 +18,20 @@
     "remark-html": "^15.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
     "@headlessui/tailwindcss": "^0.1.2",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "autoprefixer": "^10.4.13",
+    "babel-loader": "^8.3.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6",
     "typescript": "4.9.5"
