--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "tailwind": "npx tailwindcss -i ./styles/globals.css -o ./lib/tailwind.css --watch"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.10",
@@ -20,19 +21,20 @@
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@headlessui/tailwindcss": "^0.1.2",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-actions": "^7.0.0-beta.46",
+    "@storybook/addon-essentials": "^7.0.0-beta.46",
+    "@storybook/addon-interactions": "^7.0.0-beta.46",
+    "@storybook/addon-links": "^7.0.0-beta.46",
+    "@storybook/nextjs": "7.0.0-beta.46",
+    "@storybook/react": "^7.0.0-beta.46",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
     "postcss": "^8.4.21",
+    "postcss-loader": "^7.0.2",
+    "storybook": "7.0.0-beta.46",
     "tailwindcss": "^3.2.6",
     "typescript": "4.9.5"
   }
